syntax = "proto3";

package bulkistore;

// Metadata for monitoring and debugging
message RequestMetadata {
  int32 client_rank = 1;        // MPI rank of the client
  int32 client_world_size = 2;  // Total size of client's MPI world
  uint64 timestamp_ms = 3;      // Timestamp when request was created
  uint64 request_id = 4;        // Unique identifier for the request
}

// Response metadata for monitoring and debugging
message ResponseMetadata {
  int32 server_rank = 1;        // MPI rank of the server that processed the request
  int32 server_world_size = 2;  // Total size of server's MPI world
  uint64 received_at_ms = 3;    // Timestamp when server received the request
  uint64 processed_at_ms = 4;   // Timestamp when server finished processing the request
  uint64 request_id = 5;        // Request ID from the original request
}

service GrpcBulkistore {
  rpc ProcessRequest (RpcRequest) returns (RpcResponse);
}

message RpcRequest {
  RequestMetadata metadata = 1;  // Monitoring metadata
  bytes binary_data = 2;        // Actual data payload
}

message RpcResponse {
  ResponseMetadata metadata = 1; // Response metadata
  int32 status = 2;             // Status code
  bytes result_data = 3;        // Result data
  string error_message = 4;     // Error message if status indicates failure
}